# pinnacle-config

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs  uwsm_command.rs  zipper.rs
