[package]
name = "pinnacle-config"
version = "0.1.0"
edition = "2024"

[dependencies]
pinnacle-api = { git = "http://github.com/pinnacle-comp/pinnacle", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
list-zipper = { version = "0.1" }
users = { version = "0.11" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["snowcap"]
snowcap = ["pinnacle-api/snowcap"]
